--- a/index copy.html
+++ b/index copy.html
@@ -37,28 +37,12 @@
                 <p>Filter Search</p>
                 <ul class="list-group bg-dark">
                     <li class="list-group-item bg-dark">
-                        <label for="date">Enter Date</label><br>
-                        <input type="text" placeholder="e.g. 1/10/2010" id="datetime" />
-                    </li>
-                    <li class="list-group-item bg-dark">
-                        <label for="date">Enter a City</label><br>
-                        <input type="text" placeholder="e.g. roswell" id="city" />
-                    </li>
-                    <li class="list-group-item bg-dark">
-                        <label for="date">Enter a State</label><br>
-                        <input type="text" placeholder="e.g. ca" id="state" />
-                    </li>
-                    <li class="list-group-item bg-dark">
-                        <label for="date">Enter a Country</label><br>
-                        <input type="text" placeholder="e.g. us" id="country" />
-                    </li>
-                    <li class="list-group-item bg-dark">
-                        <label for="date">Enter a Shape</label><br>
-                        <input type="text" placeholder="e.g. circle" id="shape" />
+                        <label for="date">Enter Date</label>
+                        <input type="text" placeholder="1/10/2010" id="datetime" />
                     </li>
                     <li class="list-group-item bg-dark">
                         <button id="filter-btn" type="button" class="btn btn-dark">
-                            Clear Filters
+                            Filter Table
                         </button>
                     </li>
                 </ul>
@@ -84,7 +68,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
     <script src="static/js/data.js"></script>
-    <!-- <script src="static/js/app.js"></script> -->
-    <script src="static/js/app_challenge.js"></script>
+    <script src="static/js/app.js"></script>
 </body>
 </html>
